fixing burger menu alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -157,12 +157,7 @@ body {
 }
 
 .nav-left {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 0px;
-    gap: 24px;
+    gap: 12px;
 }
 
 .navbar-brand {
